<?xml version="1.0"?>
<package format="2">

  <name>driver_quad_encoder</name>
  <version>1.0.0</version>
  <description>A ROS driver for generic quadrature encoders.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs_ext</depend>

</package>
